--- a/AppDeComentarios.css
+++ b/AppDeComentarios.css
@@ -1,14 +1,21 @@
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: auto;
+    background-color: beige;
 }
 
 h1 {
+    color: #ff0a84;
+    text-align: center;
+}
+
+h2 {
+    color: #fd5fae;
     text-align: center;
 }
 
 #commentForm {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 textarea {
@@ -18,27 +25,34 @@ textarea {
     padding: 10px;
     font-size: 16px;
     border-radius: 5px;
-    border: 1px solid #ff008c
+    background-color: beige;
+    border: 2px solid #ff0a84
 }
 
 button {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 10px 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    color: #353535;
+    padding: 10px;
     font-size: 16px;
     cursor: pointer;
     border-radius: 10px;
+    background-color: #fd5fae;
+    border: 2px solid #ff0a84;
 }
 
 .comment {
-    background-color: #ffbdde;
-    border: 1px solid #ff3895;
+    width: 70%;
+    background-color: beige;
+    border: 1px solid #ff0a84;
+    align-items: center;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 10px;
 }
 
 .comment p {
-    margin: 0;
+    margin: 10px;
 }
 
 .comment .date {
